src/sintactico/y.output
   0  $accept : program $end

   1  program : definiciones

   2  definiciones : definiciones definicion
   3               |

   4  definicion : definicionVariableGlobal
   5             | definicionStruct
   6             | definicionFuncion

   7  definicionVariableGlobal : "VAR" "IDENT" ':' tipo ';'

   8  definicionVariableLocal : "VAR" "IDENT" ':' tipo ';'

   9  definicionesVariableLocal : definicionesVariableLocal definicionVariableLocal
  10                            |

  11  tipo : "INT"
  12       | "FLOAT"
  13       | "CHAR"
  14       | '[' "LITENT" ']' tipo
  15       | "IDENT"

  16  definicionStruct : "STRUCT" "IDENT" '{' campos '}' ';'

  17  campo : "IDENT" ':' tipo ';'

  18  campos : campos campo
  19         |

  20  definicionFuncion : "IDENT" '(' parametrosOpcional ')' ':' tipo '{' definicionesVariableLocal sentencias '}'
  21                    | "IDENT" '(' parametrosOpcional ')' '{' definicionesVariableLocal sentencias '}'

  22  parametro : "IDENT" ':' tipo

  23  parametros : parametro
  24             | parametros ',' parametro

  25  parametrosOpcional : parametros
  26                     |

  27  expr : "IDENT"
  28       | "LITENT"
  29       | "LITREAL"
  30       | "LITCHAR"
  31       | expr '+' expr
  32       | expr '-' expr
  33       | expr '*' expr
  34       | expr '/' expr
  35       | expr "MENORIGUAL" expr
  36       | expr "MAYORIGUAL" expr
  37       | expr '<' expr
  38       | expr '>' expr
  39       | expr "IGUAL" expr
  40       | expr "DISTINTO" expr
  41       | expr "AND" expr
  42       | expr "OR" expr
  43       | '!' expr
  44       | expr '.' "IDENT"
  45       | '(' expr ')'
  46       | "CAST" '<' tipo '>' '(' expr ')'
  47       | expr '[' expr ']'
  48       | "IDENT" '(' expresionesOpcional ')'

  49  expresiones : expr
  50              | expresiones ',' expr

  51  expresionesOpcional : expresiones
  52                      |

  53  sentencia : expr '=' expr ';'
  54            | "RETURN" expr ';'
  55            | "RETURN" ';'
  56            | "PRINT" expr ';'
  57            | "PRINTSP" expr ';'
  58            | "PRINTLN" expr ';'
  59            | "PRINTLN" ';'
  60            | "READ" expr ';'
  61            | "IF" expr '{' sentencias '}'
  62            | "IF" expr '{' sentencias '}' "ELSE" '{' sentencias '}'
  63            | "WHILE" expr '{' sentencias '}'
  64            | "IDENT" '(' expresionesOpcional ')' ';'

  65  sentencias : sentencias sentencia
  66             |

state 0
	$accept : . program $end  (0)
	definiciones : .  (3)

	.  reduce 3

	program  goto 1
	definiciones  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : definiciones .  (1)
	definiciones : definiciones . definicion  (2)

	"VAR"  shift 3
	"IDENT"  shift 4
	"STRUCT"  shift 5
	$end  reduce 1

	definicion  goto 6
	definicionVariableGlobal  goto 7
	definicionStruct  goto 8
	definicionFuncion  goto 9


state 3
	definicionVariableGlobal : "VAR" . "IDENT" ':' tipo ';'  (7)

	"IDENT"  shift 10
	.  error


state 4
	definicionFuncion : "IDENT" . '(' parametrosOpcional ')' ':' tipo '{' definicionesVariableLocal sentencias '}'  (20)
	definicionFuncion : "IDENT" . '(' parametrosOpcional ')' '{' definicionesVariableLocal sentencias '}'  (21)

	'('  shift 11
	.  error


state 5
	definicionStruct : "STRUCT" . "IDENT" '{' campos '}' ';'  (16)

	"IDENT"  shift 12
	.  error


state 6
	definiciones : definiciones definicion .  (2)

	.  reduce 2


state 7
	definicion : definicionVariableGlobal .  (4)

	.  reduce 4


state 8
	definicion : definicionStruct .  (5)

	.  reduce 5


state 9
	definicion : definicionFuncion .  (6)

	.  reduce 6


state 10
	definicionVariableGlobal : "VAR" "IDENT" . ':' tipo ';'  (7)

	':'  shift 13
	.  error


state 11
	definicionFuncion : "IDENT" '(' . parametrosOpcional ')' ':' tipo '{' definicionesVariableLocal sentencias '}'  (20)
	definicionFuncion : "IDENT" '(' . parametrosOpcional ')' '{' definicionesVariableLocal sentencias '}'  (21)
	parametrosOpcional : .  (26)

	"IDENT"  shift 14
	')'  reduce 26

	parametrosOpcional  goto 15
	parametro  goto 16
	parametros  goto 17


state 12
	definicionStruct : "STRUCT" "IDENT" . '{' campos '}' ';'  (16)

	'{'  shift 18
	.  error


state 13
	definicionVariableGlobal : "VAR" "IDENT" ':' . tipo ';'  (7)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 24


state 14
	parametro : "IDENT" . ':' tipo  (22)

	':'  shift 25
	.  error


state 15
	definicionFuncion : "IDENT" '(' parametrosOpcional . ')' ':' tipo '{' definicionesVariableLocal sentencias '}'  (20)
	definicionFuncion : "IDENT" '(' parametrosOpcional . ')' '{' definicionesVariableLocal sentencias '}'  (21)

	')'  shift 26
	.  error


state 16
	parametros : parametro .  (23)

	.  reduce 23


state 17
	parametros : parametros . ',' parametro  (24)
	parametrosOpcional : parametros .  (25)

	','  shift 27
	')'  reduce 25


state 18
	definicionStruct : "STRUCT" "IDENT" '{' . campos '}' ';'  (16)
	campos : .  (19)

	.  reduce 19

	campos  goto 28


state 19
	tipo : '[' . "LITENT" ']' tipo  (14)

	"LITENT"  shift 29
	.  error


state 20
	tipo : "IDENT" .  (15)

	.  reduce 15


state 21
	tipo : "INT" .  (11)

	.  reduce 11


state 22
	tipo : "FLOAT" .  (12)

	.  reduce 12


state 23
	tipo : "CHAR" .  (13)

	.  reduce 13


state 24
	definicionVariableGlobal : "VAR" "IDENT" ':' tipo . ';'  (7)

	';'  shift 30
	.  error


state 25
	parametro : "IDENT" ':' . tipo  (22)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 31


state 26
	definicionFuncion : "IDENT" '(' parametrosOpcional ')' . ':' tipo '{' definicionesVariableLocal sentencias '}'  (20)
	definicionFuncion : "IDENT" '(' parametrosOpcional ')' . '{' definicionesVariableLocal sentencias '}'  (21)

	':'  shift 32
	'{'  shift 33
	.  error


state 27
	parametros : parametros ',' . parametro  (24)

	"IDENT"  shift 14
	.  error

	parametro  goto 34


state 28
	definicionStruct : "STRUCT" "IDENT" '{' campos . '}' ';'  (16)
	campos : campos . campo  (18)

	"IDENT"  shift 35
	'}'  shift 36
	.  error

	campo  goto 37


state 29
	tipo : '[' "LITENT" . ']' tipo  (14)

	']'  shift 38
	.  error


state 30
	definicionVariableGlobal : "VAR" "IDENT" ':' tipo ';' .  (7)

	.  reduce 7


state 31
	parametro : "IDENT" ':' tipo .  (22)

	.  reduce 22


state 32
	definicionFuncion : "IDENT" '(' parametrosOpcional ')' ':' . tipo '{' definicionesVariableLocal sentencias '}'  (20)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 39


state 33
	definicionFuncion : "IDENT" '(' parametrosOpcional ')' '{' . definicionesVariableLocal sentencias '}'  (21)
	definicionesVariableLocal : .  (10)

	.  reduce 10

	definicionesVariableLocal  goto 40


state 34
	parametros : parametros ',' parametro .  (24)

	.  reduce 24


state 35
	campo : "IDENT" . ':' tipo ';'  (17)

	':'  shift 41
	.  error


state 36
	definicionStruct : "STRUCT" "IDENT" '{' campos '}' . ';'  (16)

	';'  shift 42
	.  error


state 37
	campos : campos campo .  (18)

	.  reduce 18


state 38
	tipo : '[' "LITENT" ']' . tipo  (14)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 43


state 39
	definicionFuncion : "IDENT" '(' parametrosOpcional ')' ':' tipo . '{' definicionesVariableLocal sentencias '}'  (20)

	'{'  shift 44
	.  error


state 40
	definicionesVariableLocal : definicionesVariableLocal . definicionVariableLocal  (9)
	definicionFuncion : "IDENT" '(' parametrosOpcional ')' '{' definicionesVariableLocal . sentencias '}'  (21)
	sentencias : .  (66)

	"VAR"  shift 45
	'('  reduce 66
	'!'  reduce 66
	"IDENT"  reduce 66
	"LITENT"  reduce 66
	'}'  reduce 66
	"LITREAL"  reduce 66
	"LITCHAR"  reduce 66
	"CAST"  reduce 66
	"RETURN"  reduce 66
	"PRINT"  reduce 66
	"PRINTSP"  reduce 66
	"PRINTLN"  reduce 66
	"READ"  reduce 66
	"IF"  reduce 66
	"WHILE"  reduce 66

	definicionVariableLocal  goto 46
	sentencias  goto 47


state 41
	campo : "IDENT" ':' . tipo ';'  (17)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 48


state 42
	definicionStruct : "STRUCT" "IDENT" '{' campos '}' ';' .  (16)

	.  reduce 16


state 43
	tipo : '[' "LITENT" ']' tipo .  (14)

	.  reduce 14


state 44
	definicionFuncion : "IDENT" '(' parametrosOpcional ')' ':' tipo '{' . definicionesVariableLocal sentencias '}'  (20)
	definicionesVariableLocal : .  (10)

	.  reduce 10

	definicionesVariableLocal  goto 49


state 45
	definicionVariableLocal : "VAR" . "IDENT" ':' tipo ';'  (8)

	"IDENT"  shift 50
	.  error


state 46
	definicionesVariableLocal : definicionesVariableLocal definicionVariableLocal .  (9)

	.  reduce 9


state 47
	definicionFuncion : "IDENT" '(' parametrosOpcional ')' '{' definicionesVariableLocal sentencias . '}'  (21)
	sentencias : sentencias . sentencia  (65)

	'('  shift 51
	'!'  shift 52
	"IDENT"  shift 53
	"LITENT"  shift 54
	'}'  shift 55
	"LITREAL"  shift 56
	"LITCHAR"  shift 57
	"CAST"  shift 58
	"RETURN"  shift 59
	"PRINT"  shift 60
	"PRINTSP"  shift 61
	"PRINTLN"  shift 62
	"READ"  shift 63
	"IF"  shift 64
	"WHILE"  shift 65
	.  error

	expr  goto 66
	sentencia  goto 67


state 48
	campo : "IDENT" ':' tipo . ';'  (17)

	';'  shift 68
	.  error


state 49
	definicionesVariableLocal : definicionesVariableLocal . definicionVariableLocal  (9)
	definicionFuncion : "IDENT" '(' parametrosOpcional ')' ':' tipo '{' definicionesVariableLocal . sentencias '}'  (20)
	sentencias : .  (66)

	"VAR"  shift 45
	'('  reduce 66
	'!'  reduce 66
	"IDENT"  reduce 66
	"LITENT"  reduce 66
	'}'  reduce 66
	"LITREAL"  reduce 66
	"LITCHAR"  reduce 66
	"CAST"  reduce 66
	"RETURN"  reduce 66
	"PRINT"  reduce 66
	"PRINTSP"  reduce 66
	"PRINTLN"  reduce 66
	"READ"  reduce 66
	"IF"  reduce 66
	"WHILE"  reduce 66

	definicionVariableLocal  goto 46
	sentencias  goto 69


state 50
	definicionVariableLocal : "VAR" "IDENT" . ':' tipo ';'  (8)

	':'  shift 70
	.  error


state 51
	expr : '(' . expr ')'  (45)

	'('  shift 51
	'!'  shift 52
	"IDENT"  shift 71
	"LITENT"  shift 54
	"LITREAL"  shift 56
	"LITCHAR"  shift 57
	"CAST"  shift 58
	.  error

	expr  goto 72


state 52
	expr : '!' . expr  (43)

	'('  shift 51
	'!'  shift 52
	"IDENT"  shift 71
	"LITENT"  shift 54
	"LITREAL"  shift 56
	"LITCHAR"  shift 57
	"CAST"  shift 58
	.  error

	expr  goto 73


state 53
	expr : "IDENT" .  (27)
	expr : "IDENT" . '(' expresionesOpcional ')'  (48)
	sentencia : "IDENT" . '(' expresionesOpcional ')' ';'  (64)

	'('  shift 74
	'='  reduce 27
	"AND"  reduce 27
	"OR"  reduce 27
	'>'  reduce 27
	'<'  reduce 27
	"IGUAL"  reduce 27
	"DISTINTO"  reduce 27
	"MAYORIGUAL"  reduce 27
	"MENORIGUAL"  reduce 27
	'+'  reduce 27
	'-'  reduce 27
	'*'  reduce 27
	'/'  reduce 27
	'['  reduce 27
	'.'  reduce 27


state 54
	expr : "LITENT" .  (28)

	.  reduce 28


state 55
	definicionFuncion : "IDENT" '(' parametrosOpcional ')' '{' definicionesVariableLocal sentencias '}' .  (21)

	.  reduce 21


state 56
	expr : "LITREAL" .  (29)

	.  reduce 29


state 57
	expr : "LITCHAR" .  (30)

	.  reduce 30


state 58
	expr : "CAST" . '<' tipo '>' '(' expr ')'  (46)

	'<'  shift 75
	.  error


state 59
	sentencia : "RETURN" . expr ';'  (54)
	sentencia : "RETURN" . ';'  (55)

	'('  shift 51
	'!'  shift 52
	"IDENT"  shift 71
	';'  shift 76
	"LITENT"  shift 54
	"LITREAL"  shift 56
	"LITCHAR"  shift 57
	"CAST"  shift 58
	.  error

	expr  goto 77


state 60
	sentencia : "PRINT" . expr ';'  (56)

	'('  shift 51
	'!'  shift 52
	"IDENT"  shift 71
	"LITENT"  shift 54
	"LITREAL"  shift 56
	"LITCHAR"  shift 57
	"CAST"  shift 58
	.  error

	expr  goto 78


state 61
	sentencia : "PRINTSP" . expr ';'  (57)

	'('  shift 51
	'!'  shift 52
	"IDENT"  shift 71
	"LITENT"  shift 54
	"LITREAL"  shift 56
	"LITCHAR"  shift 57
	"CAST"  shift 58
	.  error

	expr  goto 79


state 62
	sentencia : "PRINTLN" . expr ';'  (58)
	sentencia : "PRINTLN" . ';'  (59)

	'('  shift 51
	'!'  shift 52
	"IDENT"  shift 71
	';'  shift 80
	"LITENT"  shift 54
	"LITREAL"  shift 56
	"LITCHAR"  shift 57
	"CAST"  shift 58
	.  error

	expr  goto 81


state 63
	sentencia : "READ" . expr ';'  (60)

	'('  shift 51
	'!'  shift 52
	"IDENT"  shift 71
	"LITENT"  shift 54
	"LITREAL"  shift 56
	"LITCHAR"  shift 57
	"CAST"  shift 58
	.  error

	expr  goto 82


state 64
	sentencia : "IF" . expr '{' sentencias '}'  (61)
	sentencia : "IF" . expr '{' sentencias '}' "ELSE" '{' sentencias '}'  (62)

	'('  shift 51
	'!'  shift 52
	"IDENT"  shift 71
	"LITENT"  shift 54
	"LITREAL"  shift 56
	"LITCHAR"  shift 57
	"CAST"  shift 58
	.  error

	expr  goto 83


state 65
	sentencia : "WHILE" . expr '{' sentencias '}'  (63)

	'('  shift 51
	'!'  shift 52
	"IDENT"  shift 71
	"LITENT"  shift 54
	"LITREAL"  shift 56
	"LITCHAR"  shift 57
	"CAST"  shift 58
	.  error

	expr  goto 84


state 66
	expr : expr . '+' expr  (31)
	expr : expr . '-' expr  (32)
	expr : expr . '*' expr  (33)
	expr : expr . '/' expr  (34)
	expr : expr . "MENORIGUAL" expr  (35)
	expr : expr . "MAYORIGUAL" expr  (36)
	expr : expr . '<' expr  (37)
	expr : expr . '>' expr  (38)
	expr : expr . "IGUAL" expr  (39)
	expr : expr . "DISTINTO" expr  (40)
	expr : expr . "AND" expr  (41)
	expr : expr . "OR" expr  (42)
	expr : expr . '.' "IDENT"  (44)
	expr : expr . '[' expr ']'  (47)
	sentencia : expr . '=' expr ';'  (53)

	'='  shift 85
	"AND"  shift 86
	"OR"  shift 87
	'>'  shift 88
	'<'  shift 89
	"IGUAL"  shift 90
	"DISTINTO"  shift 91
	"MAYORIGUAL"  shift 92
	"MENORIGUAL"  shift 93
	'+'  shift 94
	'-'  shift 95
	'*'  shift 96
	'/'  shift 97
	'['  shift 98
	'.'  shift 99
	.  error


state 67
	sentencias : sentencias sentencia .  (65)

	.  reduce 65


state 68
	campo : "IDENT" ':' tipo ';' .  (17)

	.  reduce 17


state 69
	definicionFuncion : "IDENT" '(' parametrosOpcional ')' ':' tipo '{' definicionesVariableLocal sentencias . '}'  (20)
	sentencias : sentencias . sentencia  (65)

	'('  shift 51
	'!'  shift 52
	"IDENT"  shift 53
	"LITENT"  shift 54
	'}'  shift 100
	"LITREAL"  shift 56
	"LITCHAR"  shift 57
	"CAST"  shift 58
	"RETURN"  shift 59
	"PRINT"  shift 60
	"PRINTSP"  shift 61
	"PRINTLN"  shift 62
	"READ"  shift 63
	"IF"  shift 64
	"WHILE"  shift 65
	.  error

	expr  goto 66
	sentencia  goto 67


state 70
	definicionVariableLocal : "VAR" "IDENT" ':' . tipo ';'  (8)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 101


state 71
	expr : "IDENT" .  (27)
	expr : "IDENT" . '(' expresionesOpcional ')'  (48)

	'('  shift 102
	'='  reduce 27
	')'  reduce 27
	"AND"  reduce 27
	"OR"  reduce 27
	'>'  reduce 27
	'<'  reduce 27
	"IGUAL"  reduce 27
	"DISTINTO"  reduce 27
	"MAYORIGUAL"  reduce 27
	"MENORIGUAL"  reduce 27
	'+'  reduce 27
	'-'  reduce 27
	'*'  reduce 27
	'/'  reduce 27
	'['  reduce 27
	']'  reduce 27
	'.'  reduce 27
	';'  reduce 27
	'{'  reduce 27
	','  reduce 27


state 72
	expr : expr . '+' expr  (31)
	expr : expr . '-' expr  (32)
	expr : expr . '*' expr  (33)
	expr : expr . '/' expr  (34)
	expr : expr . "MENORIGUAL" expr  (35)
	expr : expr . "MAYORIGUAL" expr  (36)
	expr : expr . '<' expr  (37)
	expr : expr . '>' expr  (38)
	expr : expr . "IGUAL" expr  (39)
	expr : expr . "DISTINTO" expr  (40)
	expr : expr . "AND" expr  (41)
	expr : expr . "OR" expr  (42)
	expr : expr . '.' "IDENT"  (44)
	expr : '(' expr . ')'  (45)
	expr : expr . '[' expr ']'  (47)

	')'  shift 103
	"AND"  shift 86
	"OR"  shift 87
	'>'  shift 88
	'<'  shift 89
	"IGUAL"  shift 90
	"DISTINTO"  shift 91
	"MAYORIGUAL"  shift 92
	"MENORIGUAL"  shift 93
	'+'  shift 94
	'-'  shift 95
	'*'  shift 96
	'/'  shift 97
	'['  shift 98
	'.'  shift 99
	.  error


state 73
	expr : expr . '+' expr  (31)
	expr : expr . '-' expr  (32)
	expr : expr . '*' expr  (33)
	expr : expr . '/' expr  (34)
	expr : expr . "MENORIGUAL" expr  (35)
	expr : expr . "MAYORIGUAL" expr  (36)
	expr : expr . '<' expr  (37)
	expr : expr . '>' expr  (38)
	expr : expr . "IGUAL" expr  (39)
	expr : expr . "DISTINTO" expr  (40)
	expr : expr . "AND" expr  (41)
	expr : expr . "OR" expr  (42)
	expr : '!' expr .  (43)
	expr : expr . '.' "IDENT"  (44)
	expr : expr . '[' expr ']'  (47)

	'>'  shift 88
	'<'  shift 89
	"IGUAL"  shift 90
	"DISTINTO"  shift 91
	"MAYORIGUAL"  shift 92
	"MENORIGUAL"  shift 93
	'+'  shift 94
	'-'  shift 95
	'*'  shift 96
	'/'  shift 97
	'['  shift 98
	'.'  shift 99
	'='  reduce 43
	')'  reduce 43
	"AND"  reduce 43
	"OR"  reduce 43
	']'  reduce 43
	';'  reduce 43
	'{'  reduce 43
	','  reduce 43


state 74
	expr : "IDENT" '(' . expresionesOpcional ')'  (48)
	sentencia : "IDENT" '(' . expresionesOpcional ')' ';'  (64)
	expresionesOpcional : .  (52)

	'('  shift 51
	'!'  shift 52
	"IDENT"  shift 71
	"LITENT"  shift 54
	"LITREAL"  shift 56
	"LITCHAR"  shift 57
	"CAST"  shift 58
	')'  reduce 52

	expr  goto 104
	expresionesOpcional  goto 105
	expresiones  goto 106


state 75
	expr : "CAST" '<' . tipo '>' '(' expr ')'  (46)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 107


state 76
	sentencia : "RETURN" ';' .  (55)

	.  reduce 55


state 77
	expr : expr . '+' expr  (31)
	expr : expr . '-' expr  (32)
	expr : expr . '*' expr  (33)
	expr : expr . '/' expr  (34)
	expr : expr . "MENORIGUAL" expr  (35)
	expr : expr . "MAYORIGUAL" expr  (36)
	expr : expr . '<' expr  (37)
	expr : expr . '>' expr  (38)
	expr : expr . "IGUAL" expr  (39)
	expr : expr . "DISTINTO" expr  (40)
	expr : expr . "AND" expr  (41)
	expr : expr . "OR" expr  (42)
	expr : expr . '.' "IDENT"  (44)
	expr : expr . '[' expr ']'  (47)
	sentencia : "RETURN" expr . ';'  (54)

	"AND"  shift 86
	"OR"  shift 87
	'>'  shift 88
	'<'  shift 89
	"IGUAL"  shift 90
	"DISTINTO"  shift 91
	"MAYORIGUAL"  shift 92
	"MENORIGUAL"  shift 93
	'+'  shift 94
	'-'  shift 95
	'*'  shift 96
	'/'  shift 97
	'['  shift 98
	'.'  shift 99
	';'  shift 108
	.  error


state 78
	expr : expr . '+' expr  (31)
	expr : expr . '-' expr  (32)
	expr : expr . '*' expr  (33)
	expr : expr . '/' expr  (34)
	expr : expr . "MENORIGUAL" expr  (35)
	expr : expr . "MAYORIGUAL" expr  (36)
	expr : expr . '<' expr  (37)
	expr : expr . '>' expr  (38)
	expr : expr . "IGUAL" expr  (39)
	expr : expr . "DISTINTO" expr  (40)
	expr : expr . "AND" expr  (41)
	expr : expr . "OR" expr  (42)
	expr : expr . '.' "IDENT"  (44)
	expr : expr . '[' expr ']'  (47)
	sentencia : "PRINT" expr . ';'  (56)

	"AND"  shift 86
	"OR"  shift 87
	'>'  shift 88
	'<'  shift 89
	"IGUAL"  shift 90
	"DISTINTO"  shift 91
	"MAYORIGUAL"  shift 92
	"MENORIGUAL"  shift 93
	'+'  shift 94
	'-'  shift 95
	'*'  shift 96
	'/'  shift 97
	'['  shift 98
	'.'  shift 99
	';'  shift 109
	.  error


state 79
	expr : expr . '+' expr  (31)
	expr : expr . '-' expr  (32)
	expr : expr . '*' expr  (33)
	expr : expr . '/' expr  (34)
	expr : expr . "MENORIGUAL" expr  (35)
	expr : expr . "MAYORIGUAL" expr  (36)
	expr : expr . '<' expr  (37)
	expr : expr . '>' expr  (38)
	expr : expr . "IGUAL" expr  (39)
	expr : expr . "DISTINTO" expr  (40)
	expr : expr . "AND" expr  (41)
	expr : expr . "OR" expr  (42)
	expr : expr . '.' "IDENT"  (44)
	expr : expr . '[' expr ']'  (47)
	sentencia : "PRINTSP" expr . ';'  (57)
